# rust-igd

./: .gitignore  .travis.yml  Cargo.toml  README.md  docs.sh  search-index.js
.github/workflows/: ci.yml
aho_corasick/: index.html  struct.AcAutomaton.html  struct.Dense.html  struct.FullAcAutomaton.html  struct.Match.html  struct.Matches.html  struct.MatchesOverlapping.html  struct.Sparse.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html  trait.Automaton.html  trait.Transitions.html  type.StateIdx.html
examples/: add_any_port.rs  add_port.rs  add_remove.rs  aio.rs  async.rs  external_ip.rs  remove_port.rs  simple.rs
httparse/: constant.EMPTY_HEADER.html  enum.Error.html  enum.Status.html  fn.parse_chunk_size.html  fn.parse_headers.html  index.html  struct.Header.html  struct.InvalidChunkSize.html  struct.Request.html  struct.Response.html  type.Result.html
hyper/: macro.__hyper__deref!.html  macro.__hyper__tm!.html  macro.__hyper_generate_header_serialization!.html  macro.bench_header!.html  macro.header!.html  macro.test_header!.html  struct.Url.html
hyper/client/: enum.Body.html  enum.RedirectPolicy.html  index.html  struct.Client.html  struct.RequestBuilder.html  trait.IntoUrl.html
hyper/error/: enum.Error.html  index.html  type.Result.html
hyper/header/: enum.AccessControlAllowOrigin.html  enum.ByteRangeSpec.html  enum.CacheDirective.html  enum.Charset.html  enum.ConnectionOption.html  enum.ContentRangeSpec.html  enum.Encoding.html  enum.Expect.html  enum.IfMatch.html  enum.IfNoneMatch.html  enum.IfRange.html  enum.Pragma.html  enum.ProtocolName.html  enum.Range.html  enum.RangeUnit.html  enum.Vary.html  fn.q.html  fn.qitem.html  index.html  struct.Accept.html  struct.AcceptCharset.html  struct.AcceptEncoding.html  (+48 more)
igd/: enum.AddAnyPortError.html  enum.AddPortError.html  enum.GetExternalIpError.html  enum.HttpError.html  enum.PortMappingProtocol.html  enum.RemovePortError.html  enum.RequestError.html  enum.SearchError.html  fn.search_gateway.html  fn.search_gateway_from.html  fn.search_gateway_from_timeout.html  fn.search_gateway_timeout.html  index.html  sidebar-items.js  struct.Gateway.html  struct.XmlError.html
libc/: constant.ADFS_SUPER_MAGIC.html  constant.AFFS_SUPER_MAGIC.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_NETLINK.html  constant.AF_PACKET.html  constant.AF_UNIX.html  constant.BRKINT.html  constant.BS0.html  constant.BS1.html  constant.BUFSIZ.html  constant.CBAUD.html  constant.CLOCAL.html  constant.CLOCK_MONOTONIC.html  constant.CLOCK_REALTIME.html  constant.CLONE_CHILD_CLEARTID.html  constant.CLONE_CHILD_SETTID.html  constant.CLONE_DETACHED.html  constant.CLONE_FILES.html  constant.CLONE_FS.html  constant.CLONE_IO.html  constant.CLONE_NEWIPC.html  constant.CLONE_NEWNET.html  constant.CLONE_NEWNS.html  constant.CLONE_NEWPID.html  constant.CLONE_NEWUSER.html  constant.CLONE_NEWUTS.html  constant.CLONE_PARENT.html  constant.CLONE_PARENT_SETTID.html  constant.CLONE_PTRACE.html  constant.CLONE_SETTLS.html  constant.CLONE_SIGHAND.html  constant.CLONE_SYSVSEM.html  constant.CLONE_THREAD.html  constant.CLONE_UNTRACED.html  constant.CLONE_VFORK.html  constant.CLONE_VM.html  constant.CODA_SUPER_MAGIC.html  constant.CPU_SETSIZE.html  constant.CR0.html  (+1310 more)
num/: fn.abs.html  fn.abs_sub.html  fn.one.html  fn.pow.html  fn.signum.html  fn.zero.html  index.html
rand/: struct.AsciiGenerator.html  struct.Generator.html
regex/: enum.CaptureNames.html  enum.Error.html  enum.Regex.html  fn.is_match.html  fn.quote.html  index.html  struct.CaptureNames.html  struct.Captures.html  struct.FindCaptures.html  struct.FindMatches.html  struct.NoExpand.html  struct.RegexSplits.html  struct.RegexSplitsN.html  struct.SetMatchesIntoIter.html  struct.SetMatchesIter.html  struct.SubCaptures.html  struct.SubCapturesNamed.html  struct.SubCapturesPos.html  trait.Replacer.html
src/: common.rs  errors.rs  external.rs  gateway.rs  lib.rs  search.rs  soap.rs  upnp.rs
thread_local/: struct.IntoIter.html  struct.IterMut.html
unicase/: index.html  struct.UniCase.html
url/: struct.SocketAddrs.html
utf8_ranges/: struct.Utf8Sequences.html
xml/: index.html  struct.EmitterConfig.html  struct.ParserConfig.html
xmltree/: enum.ParseError.html  index.html  struct.Element.html
(+905 files in other folders)
