[package]
name = "igd"
version = "0.9.1"
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]
description = "Internet Gateway Protocol client"
homepage = "https://github.com/sbstp/rust-igd"
repository = "https://github.com/sbstp/rust-igd"
documentation = "https://docs.rs/igd/"
readme = "README.md"
keywords = ["igd", "upnp"]
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[dependencies]
xmltree = "0.8"
rand = "0.4"
attohttpc = { version = "0.4", default-features = false }
url = "1"
futures = { version = "0.1", optional = true }
tokio = { version = "0.1", optional = true }
tokio-retry = { version = "0.2", optional = true }
log = { version = "0.4", optional = true }
bytes = { version = "0.4", optional = true }
http = {version = "0.1", optional = true }

[dependencies.hyper]
version = "0.12"
default-features = false
features = [ "runtime" ]
optional = true

[dev-dependencies]
simplelog = "0.5"

[features]
default = []
aio = ["futures", "tokio", "tokio-retry", "hyper", "bytes", "log", "http"]

[[example]]
name = "add_any_port"

[[example]]
name = "add_port"

[[example]]
name = "add_remove"

[[example]]
name = "aio"
required-features = ["aio"]

[[example]]
name = "external_ip"

[[example]]
name = "remove_port"
