[package]
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]
description = "Internet Gateway Protocol client"
documentation = "https://docs.rs/igd/"
edition = "2018"
homepage = "https://github.com/sbstp/rust-igd"
keywords = ["igd", "upnp"]
license = "MIT"
name = "igd"
readme = "README.md"
repository = "https://github.com/sbstp/rust-igd"
version = "0.12.1"

[package.metadata.docs.rs]
all-features = true

[dependencies]
attohttpc = {version = "0.16", default-features = false}
bytes = {version = "1", optional = true}
futures = {version = "0.3", optional = true}
http = {version = "0.2", optional = true}
log = "0.4"
rand = "0.8"
url = "2"
xmltree = "0.10"

[dependencies.hyper]
default-features = false
features = ["client", "http1", "http2", "runtime"]
optional = true
version = "0.14"

[dev-dependencies]
simplelog = "0.9"
tokio = {version = "1", features = ["full"]}

[features]
aio = ["futures", "hyper", "bytes", "http"]
default = []
tokio1 = ["tokio1-crate"]
tokio02 = ["tokio02-crate"]
tokio03 = ["tokio03-crate"]

[dependencies.tokio1-crate]
package = "tokio"
version = "^1.0"
optional = true
default-features = false
features = ["net"]

[dependencies.tokio02-crate]
package = "tokio"
version = "^0.2"
optional = true
default-features = false
features = ["net"]

[dependencies.tokio03-crate]
package = "tokio"
version = "^0.3.4"
optional = true
default-features = false
features = ["net"]

[[example]]
name = "add_any_port"

[[example]]
name = "add_port"

[[example]]
name = "add_remove"

[[example]]
name = "aio"
required-features = ["aio"]

[[example]]
name = "external_ip"

[[example]]
name = "remove_port"
